<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".app.MockSupportActivity" />

    <Button
        android:id="@+id/moveToMarkers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/clear"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:text="@string/move_to_markers" />

    <Button
        android:id="@+id/clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activate"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:text="@string/clear" />

    <Button
        android:id="@+id/playPause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activate"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:text="@string/pause"
        android:visibility="gone"
        tools:visibility="visible" />

    <Button
        android:id="@+id/activate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:text="@string/activate" />
</RelativeLayout>